data/derived/sp14/progs/unify/prog1509.ml.out
Characters 152-153:
  let (_, res) = List.fold_left f base args in
                                ^
Error: This expression has type
         int list * 'a -> int -> (int -> int) * int list
       but an expression was expected of type
         int list * 'a -> int -> int list * 'a
       Type int -> int is not compatible with type int list 
